[package]
name = "hwm"
version = "0.2.0"
edition = "2021"
authors = ["Heiko Riemer <mail@eheiko.net>"]

[[bin]]
doc = false
name = "hwm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
penrose = "0.3.4"
# simplelog = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[profile.release]
strip = true
