[package]
name = "hwm"
version = "0.2.0"
edition = "2021"
authors = ["Heiko Riemer <mail@eheiko.net>"]
description = "Heiko's personal tiling window manager for X11 (written in Rust)"

[[bin]]
doc = false
name = "hwm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
penrose = "0.3.6"
# simplelog = "0.12.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[profile.release]
strip = true
